--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">To Do List App</string>
+    <string name="add">Add</string>
+    <string name="task_title">Task Title</string>
 </resources>
