Task Data 1: 1- I Decided to go with startDate and endDate as String in Task data class so later it will be compatible with RoomDB 2- commented the dummy data 3- added endDate to task_fragment.xml , implemented it into TaskFragment.kt using DatePickerDialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
     <string name="delete">Delete</string>
+    <string name="date">Date</string>
+    <string name="dd_mm_yy">DD/MM/YY</string>
+    <string name="end_date">End Date</string>
 </resources>
