Task Data 2: 1- added more parameters to data Class Task 2- updated some of the repo , TaskFragment.kt , TaskRecyclerAdapter.kt and MainFragment.kt functions 3- added checkButton and implemented it , Color Change when checked or not

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="date">Date</string>
     <string name="dd_mm_yy">DD/MM/YY</string>
     <string name="end_date">End Date</string>
+    <string name="description">Description</string>
+    <string name="completed">Completed</string>
 </resources>
