--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="end_date">End Date</string>
     <string name="description">Description</string>
     <string name="completed">Completed</string>
+    <string name="completed_description">Completed Description</string>
 </resources>
