--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="description">Description</string>
     <string name="completed">Completed</string>
     <string name="completed_description">Completed Description</string>
+    <string name="creation_date">Creation Date</string>
 </resources>
